[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[pytest]
minversion = 2.2
norecursedirs = build docs/_build
doctest_plus = enabled

[ah_bootstrap]
auto_use = True

[metadata]
package_name = gaussfitter
description = gaussfitter, tools for fitting 1d and 2d gaussians
long_description = Simple 2D Gaussian fitter
author = Adam Ginsburg
author_email = adam.g.ginsburg@gmail.com
license = BSD
url = https://github.com/keflavich/gaussfitter
edit_on_github = True
github_project = keflavich/gaussfitter

[entry_points]
astropy-package-template-example = packagename.example_mod:main
